[package]
name = "kcpgateway"
version = "0.1.0"
authors = ["yi lu <luyikk@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
net2 = "0.2"
num_cpus="1.8"
log="0.4"
bytes = "0.5.6"
chrono="0.4"
mimalloc = "0.1"
ahash = "0.7"
xbinary = "0.1.4"
async-trait = "0.1"
async-mutex = "1.4"
lazy_static = "1.4"
json = "0.12"
flexi_logger = "0.17"
anyhow="1.0"
structopt="0.3"

[build-dependencies]
vergen = "5"
anyhow = "1"

[profile.release]
panic="abort"
lto = "fat"
codegen-units = 1
