[package]
name = "kcpgateway"
version = "0.1.0"
authors = ["yi lu <luyikk@126.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default=["flexi_log"]
flexi_log=["flexi_logger"]
env_log=["env_logger"]

[dependencies]
tokio = { version = "1", features = ["full"] }
net2 = "0.2"
num_cpus="1.8"
log="0.4"
bytes = "0.5"
chrono="0.4"
mimalloc = "0.1"
ahash = "0.8"
xbinary = "0.1.5"
async-trait = "0.1"
async-mutex = "1.4"
lazy_static = "1.4"
serde={version="1",features=["derive"]}
serde_json="1"
flexi_logger={version= "0.25",features=["async"],optional =true}
env_logger = {version= "0.10",optional =true}
anyhow="1.0"
clap = { version = "4", features = ["derive"] }

[build-dependencies]
vergen = "7"
anyhow = "1"

[profile.release]
panic="abort"
lto = "fat"
codegen-units = 1
